--- a/dorian/dorian-ui/index.html
+++ b/dorian/dorian-ui/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dorian - Build AI agents with a visual workflow builder. No code required." />
+    <meta
+      name="description"
+      content="Dorian - Build AI agents with a visual workflow builder. No code required."
+    />
     <title>Dorian - Orchestrate Intelligence Without Code</title>
   </head>
   <body>
